--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Native v1 web typeahead component",
   "dependencies": {
     "@webcomponents/webcomponentsjs": "git+https://github.com/webcomponents/webcomponentsjs.git",
+    "s-utilities": "^1.0.1",
     "tiny-uri": "git+https://github.com/robhicks/tiny-uri.git"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "rollup-plugin-less": "^0.1.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-string": "^2.0.2",
-    "rollup-plugin-superviews": "git+https://github.com/robhicks/rollup-plugin-superviews.git",
+    "rollup-plugin-superviews": "^1.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.3.1",
     "sinon": "^3.2.1",
