--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s-typeahead",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Native v1 web typeahead component",
   "dependencies": {
     "@webcomponents/webcomponentsjs": "git+https://github.com/webcomponents/webcomponentsjs.git",
@@ -9,16 +9,17 @@
   },
   "devDependencies": {
     "angular": "^1.6.6",
-    "chai": "^4.1.1",
+    "babel-core": "^6.26.0",
+    "chai": "^4.1.2",
     "del": "^3.0.0",
-    "eslint": "^4.5.0",
+    "eslint": "^4.7.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-intercept": "^0.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "json-server": "^0.12.0",
-    "karma": "^1.7.0",
-    "karma-babel-preprocessor": "^6.0.1",
+    "karma": "^1.7.1",
+    "karma-babel-preprocessor": "^7.0.0",
     "karma-chai-sinon": "^0.1.5",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
@@ -28,27 +29,24 @@
     "karma-spec-reporter": "0.0.31",
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.5.0",
-    "rollup": "^0.49.2",
+    "mocha": "^3.5.3",
+    "rollup": "^0.49.3",
     "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-less": "^0.1.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-string": "^2.0.2",
-    "rollup-plugin-superviews": "^1.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.3.1",
     "sinon": "^3.2.1",
-    "sinon-chai": "^2.13.0",
-    "superviews.js": "^3.0.4"
+    "sinon-chai": "^2.13.0"
   },
   "engines": {
     "node": "6.x"
   },
   "scripts": {
-    "dev": "rollup -c -w & gulp & node server.js & json-server --watch db.json",
+    "dev": "rollup -c -w & node server.js & json-server --watch db.json",
     "dev-tests": "dev-tests",
     "demo": "node server.js",
     "karma": "karma start karma.conf.js",
