--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "s-typeahead",
-  "version": "1.0.2",
+  "version": "2.0.1",
   "description": "Native v1 web typeahead component",
   "dependencies": {
     "@webcomponents/webcomponentsjs": "git+https://github.com/webcomponents/webcomponentsjs.git",
-    "s-utilities": "^1.0.1",
-    "tiny-uri": "git+https://github.com/robhicks/tiny-uri.git"
+    "s-utilities": "^1.0.1"
   },
   "devDependencies": {
     "angular": "^1.6.6",
@@ -43,7 +42,6 @@
     "sinon-chai": "^2.13.0"
   },
   "engines": {
-    "node": "6.x"
   },
   "scripts": {
     "dev": "rollup -c -w & node server.js & json-server --watch db.json",
