--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "s-typeahead",
-  "version": "2.0.1",
+  "version": "2.0.3",
   "description": "Native v1 web typeahead component",
-  "dependencies": {
-    "@webcomponents/webcomponentsjs": "git+https://github.com/webcomponents/webcomponentsjs.git",
-    "s-utilities": "^1.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "git+https://github.com/webcomponents/webcomponentsjs.git",
     "angular": "^1.6.6",
     "babel-core": "^6.26.0",
     "chai": "^4.1.2",
@@ -29,6 +27,7 @@
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
     "mocha": "^3.5.3",
+    "npm-run-all": "^4.1.2",
     "rollup": "^0.49.3",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.2.1",
@@ -41,13 +40,16 @@
     "sinon": "^3.2.1",
     "sinon-chai": "^2.13.0"
   },
-  "engines": {
-  },
+  "engines": {},
+  "license": "MIT",
   "scripts": {
+    "build": "rollup -c",
+    "build-watch": "rollup -cw",
     "dev": "rollup -c -w & node server.js & json-server --watch db.json",
     "dev-tests": "dev-tests",
     "demo": "node server.js",
     "karma": "karma start karma.conf.js",
+    "postinstall": "npm-run-all build",
     "test": "tests"
   }
 }
