--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s-typeahead",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Native v1 web typeahead component",
   "dependencies": {},
   "devDependencies": {
@@ -40,8 +40,8 @@
     "sinon": "^3.2.1",
     "sinon-chai": "^2.13.0"
   },
-  "engines": {},
   "license": "MIT",
+  "module": "dist/s-typeahead.mjs",
   "scripts": {
     "build": "rollup -c",
     "build-watch": "rollup -cw",
