--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s-typeahead",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Native v1 web typeahead component",
   "dependencies": {},
   "devDependencies": {
@@ -37,6 +37,7 @@
     "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.3.1",
+    "s-utilities": "^1.0.13",
     "sinon": "^3.2.1",
     "sinon-chai": "^2.13.0"
   },
